--- a/frontend-restaurante/src/index.html
+++ b/frontend-restaurante/src/index.html
@@ -6,6 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Carregando estilos do PrimeNG diretamente da Internet (CDN) -->
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/primeicons@7.0.0/primeicons.css" />
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/primeng@20.0.0/themes/lara-light-blue/theme.css" />
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/primeng@20.0.0/primeng.css" />
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/primeflex@3.3.1/primeflex.css" />
+  <!-- Fim dos links da CDN -->
+
 </head>
 <body>
   <app-root></app-root>
